added right align

--- a/templating/templates/content/profile.template.html
+++ b/templating/templates/content/profile.template.html
@@ -7,37 +7,37 @@
       <tbody>
         <tr>
           <th>Played Games</th>
-          <td>
+          <td class="right">
             [[playedGames]]
           </td>
         </tr>
         <tr>
           <th>Highest base score (rank)</th>
-          <td>
+          <td class="right">
             [[highestBase]] ([[baseRank]])
           </td>
         </tr>
         <tr>
           <th>Highest full score (rank)</th>
-          <td>
+          <td class="right">
             [[highestFull]] ([[fullRank]])
           </td>
         </tr>
         <tr>
           <th>Total score</th>
-          <td>
+          <td class="right">
             [[totalScore]]
           </td>
         </tr>
         <tr>
           <th>Average score per game</th>
-          <td>
+          <td class="right">
             [[averageScore]]
           </td>
         </tr>
         <tr>
           <th>Latest Game</th>
-          <td>
+          <td class="right">
             {{IF [[latestGame]] == null}}
               N/A
             {{ELSE}}
