--- a/templating/templates/content/profile.template.html
+++ b/templating/templates/content/profile.template.html
@@ -3,6 +3,11 @@
 <main>
   <div class="container">
     <h3>[[player.getPlayerName()]]'s Profile</h3>
+    <div class="row">
+      <div class="col s12 m3">
+        <img src="[[Util::getGravatarUrl([[player.getEmail()]])]]" class="responsive-img">
+      </div>
+    </div>
     <table class="striped">
       <tbody>
         <tr>
