--- a/templating/templates/content/profile.template.html
+++ b/templating/templates/content/profile.template.html
@@ -5,7 +5,7 @@
     <h3>[[player.getPlayerName()]]'s Profile</h3>
     <div class="row">
       <div class="col s12 m3">
-        <img src="[[Util::getGravatarUrl([[player.getEmail()]])]]" class="responsive-img">
+        <img src="[[Util::getGravatarUrl([[player.getEmail(), 500]])]]" class="responsive-img">
       </div>
     </div>
     <table class="striped">
