added link to profile

--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -2,6 +2,13 @@
 {%TEMPLATE->struct/menu%}
 <main>
   <div class="container">
+    <h4>Profile</h4>
+    <div class="row">
+      <div class="col s12">
+        <a class="btn-large waves-effect waves-light green">View Your Profile</a>
+      </div>
+    </div>
+
     <h4>Connect your Account</h4>
     <p>You can connect your account with multiple logins on different systems.</p>
     <div class="row">
