--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -5,7 +5,7 @@
     <h4>Profile</h4>
     <div class="row">
       <div class="col s12">
-        <a class="btn-large waves-effect waves-light green">View Your Profile</a>
+        <a class="btn-large waves-effect waves-light green" href="profile.php?id=[[oauth.getPlayerId()]]">View Your Profile</a>
       </div>
     </div>
 
