--- a/templating/templates/content/leaderboards.template.html
+++ b/templating/templates/content/leaderboards.template.html
@@ -18,7 +18,7 @@
           {{FOREACH game;[[games]];counter}}
             <tr>
               <td>[[Util::calculate([[counter]] + 1)]]</td>
-              <td>[[Util::getPlayerNameById([[game.getPlayerId()]])]]</td>
+              <td><a href="profile.php?id=[[game.getPlayerId()]]">[[Util::getPlayerNameById([[game.getPlayerId()]])]]</a></td>
               <td>[[date("d.m.Y", [[game.getFinishedTime()]])]]</td>
               <td class="right">[[Util::number([[game.getFullScore()]])]]</td>
             </tr>
@@ -41,7 +41,7 @@
           {{FOREACH game;[[baseGames]];counter}}
             <tr>
               <td>[[Util::calculate([[counter]] + 1)]]</td>
-              <td>[[Util::getPlayerNameById([[game.getPlayerId()]])]]</td>
+              <td><a href="profile.php?id=[[game.getPlayerId()]]">[[Util::getPlayerNameById([[game.getPlayerId()]])]]</a></td>
               <td>[[date("d.m.Y", [[game.getFinishedTime()]])]]</td>
               <td class="right">[[Util::number([[game.getGameScore()]])]]</td>
             </tr>
@@ -63,7 +63,7 @@
           {{FOREACH score;[[totalScore]];counter}}
             <tr>
               <td>[[Util::calculate([[counter]] + 1)]]</td>
-              <td>[[Util::getPlayerNameById([[score.getVal('playerId')]])]]</td>
+              <td><a href="profile.php?id=[[game.getPlayerId()]]">[[Util::getPlayerNameById([[score.getVal('playerId')]])]]</a></td>
               <td class="right">[[Util::number([[score.getVal('score')]])]]</td>
             </tr>
           {{ENDFOREACH}}
