--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -21,7 +21,7 @@
     </div>
 
     <h4>Invite other People</h4>
-    <p>Invite other people to join [[gameName]] and earn achievements!</p>
+    <p>Invite other people to join [[GameName]] and earn achievements!</p>
     <form action="settings.php" method="post">
       <input type="hidden" name="action" value="invite">
       <div class="row">
