--- a/templating/templates/content/leaderboards.template.html
+++ b/templating/templates/content/leaderboards.template.html
@@ -63,7 +63,7 @@
           {{FOREACH score;[[totalScore]];counter}}
             <tr>
               <td>[[Util::calculate([[counter]] + 1)]]</td>
-              <td><a href="profile.php?id=[[game.getPlayerId()]]">[[Util::getPlayerNameById([[score.getVal('playerId')]])]]</a></td>
+              <td><a href="profile.php?id=[[score.getVal('playerId')]]">[[Util::getPlayerNameById([[score.getVal('playerId')]])]]</a></td>
               <td class="right">[[Util::number([[score.getVal('score')]])]]</td>
             </tr>
           {{ENDFOREACH}}
