added cdn of materialize

--- a/templating/templates/struct/head.template.html
+++ b/templating/templates/struct/head.template.html
@@ -8,13 +8,13 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css?bla=[[rand()]]" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/theme.materialize.css" type="text/css" rel="stylesheet">
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/jquery.tablesorter.min.js"></script>
   <script src="js/jquery.tablesorter.widgets.js"></script>
