fixed key generation added invite code

--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -26,7 +26,7 @@
       <input type="hidden" name="action" value="invite">
       <div class="row">
         <div class="input-field col s12">
-          <input id="invite" type="text" name="email" class="validate">
+          <input id="invite" type="email" name="email" class="validate">
           <label for="invite">Email Address</label>
         </div>
         <div class="col s12 m3">
