--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -40,8 +40,47 @@
       <a class="btn-large waves-effect waves-light blue" href="session.php?refer=game">Start new Game</a>
     </div>
     <div class="row center">
-      <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=I+just+scored+[[score.getVal('totalScore')]]+points+on+%40ArtSimily{{IF [[oauth.isLoggedin()]]}}+https://artsimily.com/profile.php?id=[[oauth.getPlayer().getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]{{ENDIF}}&hashtags=artsimily" data-size="large">Tweet your Success</a>
+      <a class="twitter-share-button customer share" target="_blank" title="Twitter Share" href="https://twitter.com/intent/tweet?text=I+just+scored+[[Util::number([[score.getVal('totalScore')]])]]+points+on+%40ArtSimily{{IF [[oauth.isLoggedin()]]}}+https://artsimily.com/profile.php?id=[[oauth.getPlayer().getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]{{ENDIF}}&hashtags=artsimily" data-size="large">Tweet your Success</a>
     </div>
   </div>
 </main>
+<script type="text/javascript">
+    ;(function($){
+
+        /**
+         * SOURCE: http://codepen.io/patrickkahl/pen/DxmfG
+         *
+         * jQuery function to prevent default anchor event and take the href * and the title to make a share popup
+         *
+         * @param  {[object]} e           [Mouse event]
+         * @param  {[integer]} intWidth   [Popup width defalut 500]
+         * @param  {[integer]} intHeight  [Popup height defalut 400]
+         * @param  {[boolean]} blnResize  [Is popup resizeabel default true]
+         */
+        $.fn.customerPopup = function (e, intWidth, intHeight, blnResize) {
+
+            // Prevent default anchor event
+            e.preventDefault();
+
+            // Set values for window
+            intWidth = intWidth || '500';
+            intHeight = intHeight || '400';
+            strResize = (blnResize ? 'yes' : 'no');
+
+            // Set title and open popup with focus on it
+            var strTitle = ((typeof this.attr('title') !== 'undefined') ? this.attr('title') : 'Social Share'),
+                strParam = 'width=' + intWidth + ',height=' + intHeight + ',resizable=' + strResize,
+                objWindow = window.open(this.attr('href'), strTitle, strParam).focus();
+        }
+
+      /* ================================================== */
+
+        $(document).ready(function ($) {
+            $('.customer.share').on("click", function(e) {
+                $(this).customerPopup(e);
+            });
+        });
+
+    }(jQuery));
+</script>
 {%TEMPLATE->struct/foot%}
