--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -40,7 +40,7 @@
       <a class="btn-large waves-effect waves-light blue" href="session.php?refer=game">Start new Game</a>
     </div>
     <div class="row center">
-      <a class="twitter-share-button customer share" target="_blank" title="Twitter Share" href="https://twitter.com/intent/tweet?text=I+just+scored+[[Util::number([[score.getVal('totalScore')]])]]+points+on+%40ArtSimily{{IF [[oauth.isLoggedin()]]}}+https://artsimily.com/profile.php?id=[[oauth.getPlayer().getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]{{ENDIF}}&hashtags=artsimily" data-size="large">Tweet your Success</a>
+      <a class="twitter-share-button customer share btn-large waves-effect waves-light blue" target="_blank" title="Twitter Share" href="https://twitter.com/intent/tweet?text=I+just+scored+[[Util::number([[score.getVal('totalScore')]])]]+points+on+%40ArtSimily{{IF [[oauth.isLoggedin()]]}}+https://artsimily.com/profile.php?id=[[oauth.getPlayer().getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]{{ENDIF}}&hashtags=artsimily" data-size="large">Tweet your Success</a>
     </div>
   </div>
 </main>
