--- a/templating/templates/struct/menu.template.html
+++ b/templating/templates/struct/menu.template.html
@@ -1,3 +1,21 @@
+<script type="text/javascript">
+    window.fbAsyncInit = function() {
+        FB.init({
+            appId      : 'your-app-id',
+            xfbml      : true,
+            version    : 'v2.9'
+        });
+        FB.AppEvents.logPageView();
+    };
+
+    (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/sdk.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
 <nav class="white" role="navigation">
   <div class="nav-wrapper container">
     {{IF [[administrator]]}}
