--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -41,7 +41,7 @@
     </div>
     {{IF [[oauth.isLoggedin()]]}}
       <div class="row center">
-        <a class="twitter-share-button customer share btn-large waves-effect waves-light blue" target="_blank" title="Twitter Share" href="https://twitter.com/intent/tweet?text=I+just+scored+[[Util::number([[score.getVal('totalScore')]])]]+points+on+%40ArtSimily+https%3A%2F%2Fartsimily.com%2Fprofile.php%3Fid%3D[[oauth.getPlayer().getId()]]%26affiliate%3D[[oauth.getPlayer().getAffiliateKey()]]&hashtags=artsimily" data-size="large">Tweet your Success</a>
+        <a class="twitter-share-button customer share btn-large waves-effect waves-light blue" target="_blank" title="Twitter Share" href="https://twitter.com/intent/tweet?text=I+just+scored+[[Util::number([[score.getVal('totalScore')]])]]+points+on+%40ArtSimily+[[urlencode([[Domain]])]]%2Fprofile.php%3Fid%3D[[oauth.getPlayer().getId()]]%26affiliate%3D[[oauth.getPlayer().getAffiliateKey()]]&hashtags=artsimily" data-size="large">Tweet your Success</a>
         <a class="facebook btn-large waves-effect waves-light blue" onclick="fbPopup()" title="Facebook Share" target="_blank">Post on Facebook</a>
       </div>
     {{ENDIF}}
@@ -53,7 +53,7 @@
           FB.ui({
               method: 'feed',
               description: "I just scored [[Util::number([[score.getVal('totalScore')]])]] points on ArtSimily!",
-              link: 'https://artsimily.com/game.php?game=[[game.getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]',
+              link: '[[Domain]]/game.php?game=[[game.getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]',
               caption: 'ArtSimily Link'
           }, function(response){});
       }
