--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -2,6 +2,13 @@
 {%TEMPLATE->struct/menu%}
 <main>
   <div class="container">
+    {{IF ![[isFresh]]}}
+      <div class="row">
+        <div class="col s12 center score-text">
+          <b>[[Util::getPlayerNameById([[game.getPlayerId()]])]] played</b>
+        </div>
+      </div>
+    {{ENDIF}}
     <div class="row black-text">
       <div class="col s12 m12 center score-text">
         <br><br>Base Score:<br>
