--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -46,7 +46,7 @@
     <div class="row center">
       <a class="btn-large waves-effect waves-light blue" href="session.php?refer=game">Start new Game</a>
     </div>
-    {{IF [[oauth.isLoggedin()]]}}
+    {{IF [[oauth.isLoggedin()]] && [[oauth.getPlayer().getId()]] == [[game.getPlayerId()]]}}
       <div class="row center">
         <a class="twitter-share-button customer share btn-large waves-effect waves-light blue" target="_blank" title="Twitter Share" href="https://twitter.com/intent/tweet?text=I+just+scored+[[Util::number([[score.getVal('totalScore')]])]]+points+on+%40ArtSimily+[[urlencode([[Domain]])]]%2Fprofile.php%3Fid%3D[[oauth.getPlayer().getId()]]%26affiliate%3D[[oauth.getPlayer().getAffiliateKey()]]&hashtags=artsimily" data-size="large">Tweet your Success</a>
         <a class="facebook btn-large waves-effect waves-light blue" onclick="fbPopup()" title="Facebook Share" target="_blank">Post on Facebook</a>
