--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -5,7 +5,7 @@
     {{IF ![[isFresh]]}}
       <div class="row">
         <div class="col s12 center">
-          <h4>[[Util::getPlayerNameById([[game.getPlayerId()]])]] played</h4>
+          <h4><a href="profile.php?id=[[game.getPlayerId()]]">[[Util::getPlayerNameById([[game.getPlayerId()]])]]</a> played</h4>
         </div>
       </div>
     {{ENDIF}}
