--- a/templating/templates/email/invite.template.html
+++ b/templating/templates/email/invite.template.html
@@ -2,7 +2,7 @@
   <body>
     Hi,<br><br>
     You are invited by [[playerName]] to join [[GameName]]!<br>
-    Click <a href="https://artsimily.com/session.php?affiliate=[[affiliateKey]]">here</a> to start playing ;)<br><br>
+    Click <a href="https://[[Domain]]/session.php?affiliate=[[affiliateKey]]">here</a> to start playing ;)<br><br>
     Sincerely,<br>
     ArtSimily
   </body>
