--- a/templating/templates/struct/menu.template.html
+++ b/templating/templates/struct/menu.template.html
@@ -19,7 +19,7 @@
 <nav class="white" role="navigation">
   <div class="nav-wrapper container">
     {{IF [[administrator]]}}
-      <a id="logo-container" href="admin.php" class="brand-logo">Cineast Evaluator</a>
+      <a id="logo-container" href="admin.php" class="brand-logo"><img src="static/logo.png" alt="logo"></a>
       <ul class="right hide-on-med-and-down">
         {%TEMPLATE->struct/admin_entries%}
       </ul>
