--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -30,7 +30,7 @@
           <label for="invite">Email Address</label>
         </div>
         <div class="col s12 m3">
-          <button class="btn waves-effect waves-light green" type="submit">Invite</button>
+          <button class="btn waves-effect waves-light green" type="submit">Invite <i class="material-icons right">send</i></button>
         </div>
       </div>
     </form>
@@ -46,9 +46,7 @@
       </div>
       <div class="row">
         <div class="col s12">
-          <button class="btn waves-effect waves-light green" type="submit">Update
-            <i class="material-icons right">send</i>
-          </button>
+          <button class="btn waves-effect waves-light green" type="submit">Update</button>
         </div>
       </div>
     </form>
