--- a/templating/templates/struct/head.template.html
+++ b/templating/templates/struct/head.template.html
@@ -11,6 +11,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css?bla=[[rand()]]" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/theme.materialize.css" type="text/css" rel="stylesheet">
+  <link rel="icon" href="static/icon.png">
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
