added missing 'and'

--- a/templating/templates/content/disclaimer.template.html
+++ b/templating/templates/content/disclaimer.template.html
@@ -18,7 +18,7 @@
     <div class="row center">
       <form action="session.php" method="post">
         <button type="submit" name="disclaimerAccept" class="btn-large waves-effect waves-light green">I've read the
-          disclaimer accept it
+          disclaimer and accept it
         </button>
       </form>
     </div>
