fixed link updated css for input color on email

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,15 @@ main {
     box-shadow: 0 1px 0 0 green;
 }
 
+.input-field input[type=email]:focus + label {
+    color: green;
+}
+/* label underline focus color */
+.input-field input[type=email]:focus {
+    border-bottom: 1px solid green;
+    box-shadow: 0 1px 0 0 green;
+}
+
 /* label focus color */
 .input-field input[type=password]:focus + label {
     color: green;
