--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -25,9 +25,11 @@
       Invite other people to join [[GameName]] and earn achievements!<br>
       If you want to send the link on some other way, just copy the link below.
     </p>
-    <div class="input-field col s12">
-      <input id="inviteLink" type="text" name="link" class="validate">
-      <label for="inviteLink">Link</label>
+    <div class="row">
+      <div class="input-field col s12">
+        <input id="inviteLink" type="text" name="link" class="validate" value="[[Domain]]session.php?affiliate=[[oauth.getPlayer().getAffiliateKey()]]">
+        <label for="inviteLink">Link</label>
+      </div>
     </div>
     <form action="settings.php" method="post">
       <input type="hidden" name="action" value="invite">
