--- a/templating/templates/email/struct/head.template.html
+++ b/templating/templates/email/struct/head.template.html
@@ -8,16 +8,16 @@
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css?bla=[[rand()]]" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="[[Domain]]css/style.css?bla=[[rand()]]" type="text/css" rel="stylesheet" media="screen,projection"/>
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
-  <script src="js/init.js"></script>
+  <script src="[[Domain]]js/init.js"></script>
 </head>
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="admin.php" class="brand-logo"><img height="64px" src="static/logo.png" alt="logo"></a>
+      <a id="logo-container" href="[[Domain]]index.php" class="brand-logo"><img height="64px" src="[[Domain]]static/logo.png" alt="logo"></a>
     </div>
   </nav>
