updated email template

--- a/templating/templates/email/struct/foot.template.html
+++ b/templating/templates/email/struct/foot.template.html
@@ -1,8 +1,8 @@
-<footer class="page-footer">
+<footer class="page-footer white">
   <div class="container">
     <div class="row">
-      <div class="col s12">
-        This is the footer
+      <div class="col s12 center">
+        Sent via <a href="[[Domain]]">ArtSimily.com</a>
       </div>
     </div>
   </div>
