--- a/templating/templates/email/invite.template.html
+++ b/templating/templates/email/invite.template.html
@@ -1,15 +1,15 @@
 {%TEMPLATE->email/struct/head%}
 <main>
   <div class="container">
-    <div class="row">
+    <div class="row" style="margin-bottom: 50px;">
       <div class="col s12 center" style="font-size: 20px;">
-        Hi,<br><br>
+        &nbsp;<br><br>
         You are invited by [[playerName]] to join [[GameName]]!<br>
       </div>
     </div>
     <div class="row">
       <div class="col s12 center">
-        <a href="[[Domain]]/session.php?affiliate=[[affiliateKey]]" class="btn-large waves-effect waves-light green">Start Playing</a>
+        <a href="[[Domain]]session.php?affiliate=[[affiliateKey]]" class="btn-large waves-effect waves-light green">Start Playing</a>
       </div>
     </div>
   </div>
