--- a/templating/templates/email/struct/head.template.html
+++ b/templating/templates/email/struct/head.template.html
@@ -1,13 +1,13 @@
-<style>
-  [[Style]]
-</style>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+<link href="[[Domain]]css/style.css?bla=[[rand()]]" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-<script type="text/javascript">
-  [[Script]]
-</script>
-
+<!--  Scripts-->
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+<script src="[[Domain]]js/init.js"></script>
 <nav class="white" role="navigation">
   <div class="nav-wrapper container">
-    <a id="logo-container" href="[[Domain]]index.php" class="brand-logo"><img height="64px" src="[[Logo]]" alt="logo"></a>
+    <a id="logo-container" href="[[Domain]]index.php" class="brand-logo"><img height="64px" src="[[Domain]]static/logo.png" alt="logo"></a>
   </div>
 </nav>
