added button to make it more prominent when css is not loaded

--- a/templating/templates/email/invite.template.html
+++ b/templating/templates/email/invite.template.html
@@ -7,9 +7,9 @@
         You are invited by [[playerName]] to join [[GameName]]!<br>
       </div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-bottom: 50px;">
       <div class="col s12 center">
-        <a href="[[Domain]]session.php?affiliate=[[affiliateKey]]" class="btn-large waves-effect waves-light green">Start Playing</a>
+        <a href="[[Domain]]session.php?affiliate=[[affiliateKey]]"><button class="btn-large waves-effect waves-light green">Start Playing</button></a>
       </div>
     </div>
   </div>
