--- a/templating/templates/views/help.template.html
+++ b/templating/templates/views/help.template.html
@@ -3,7 +3,7 @@
     <h4>[[GameName]] Help</h4>
     <p>
       {{IF [[showMenu]]}}
-        To get a good score in the game you should try to answer the questions as good as possible. You do this by rating how similar the two shown pieces (e.g. images) are.<br>
+        To get a good score in the game you should try to answer the questions as well as possible. You do this by rating how similar the two shown pieces (e.g. images) are.<br>
         At the end of the round your score will be calculated based on how all the other people answered.
       {{ELSE}}
         Rate the two shown pieces (e.g. images) by their similarity. At the end of the survey you will get a code which can be entered as confirmation on the task.
