changed achievement color

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ main {
 }
 
 .achievement.achieved {
-    background-color: #00CC00;
+    background-color: #a5d6a7;
 }
 
 .achievement-img-container {
