removed experimental code

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -10,11 +10,11 @@
         </div>
       </div>
     {{ENDIF}}
-    Welcome to Artsimily!
+    <!--Welcome to Artsimily!
     [insert game description here]
     [insert try-a-game button here]
     To save your highscore, create an account or log in.
-    [insert register/login buttons here]
+    [insert register/login buttons here]-->
     <div class="row">
       <div class="col s12 m2">
         <!-- placeholder -->
