--- a/templating/templates/struct/foot.template.html
+++ b/templating/templates/struct/foot.template.html
@@ -52,7 +52,7 @@
   });
   $(document).ready(function(){
       // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
-      $('.modal').modal();
+      $('.modal').modal({dismissible: false});
       {{IF [[forceOpenHelp]]}}
         $('#helpModal').modal('open');
       {{ENDIF}}
