--- a/templating/templates/content/settings.template.html
+++ b/templating/templates/content/settings.template.html
@@ -27,7 +27,7 @@
     </p>
     <div class="row">
       <div class="input-field col s12">
-        <input id="inviteLink" type="text" name="link" class="validate" value="[[Domain]]session.php?affiliate=[[oauth.getPlayer().getAffiliateKey()]]">
+        <input id="inviteLink" type="text" name="link" class="validate" value="[[Domain]]index.php?affiliate=[[oauth.getPlayer().getAffiliateKey()]]">
         <label for="inviteLink">Link</label>
       </div>
     </div>
