--- a/templating/templates/email/invite.template.html
+++ b/templating/templates/email/invite.template.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row" style="margin-bottom: 50px;">
       <div class="col s12 center">
-        <a href="[[Domain]]session.php?affiliate=[[affiliateKey]]"><button class="btn-large waves-effect waves-light green">Start Playing</button></a>
+        <a href="[[Domain]]index.php?affiliate=[[affiliateKey]]"><button class="btn-large waves-effect waves-light green">Start Playing</button></a>
       </div>
     </div>
   </div>
