centered content and updated font size

--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -12,15 +12,15 @@
       </div>
     {{ENDIF}}
     <div class="row">
-      <div class="col s12">
-        <b>What is ArtSimily about?</b>
+      <div class="col s12 center" style="font-size: 1.3em;">
+        <b>What is ArtSimily about?</b><br>
         ArtSimily is a game where you try to rate images by their contextual similarity and the "better" your answers
         are, the higher your score will get.<br>
         Start playing with clicking the button below.
       </div>
     </div>
     <div class="row">
-      <div class="col s12">
+      <div class="col s12 center">
         <a class="btn-large waves-effect waves-light green" href="session.php">Play</a>
       </div>
     </div>
