--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -12,7 +12,7 @@
       </div>
     {{ENDIF}}
     <div class="row">
-      <div class="col s12 center" style="font-size: 1.3em;">
+      <div class="col s12" style="font-size: 1.3em;">
         <b>What is ArtSimily about?</b><br>
         ArtSimily is a game where you try to rate images by their contextual similarity and the "better" your answers
         are, the higher your score will get.<br>
