made static game link clickable

--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -54,7 +54,7 @@
       <br><br><br>
       <div class="row center">
         Static URL to access this score:<br>
-        <code>[[Domain]]score.php?game=[[game.getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]</code>
+        <a href="[[Domain]]score.php?game=[[game.getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]"><code>[[Domain]]score.php?game=[[game.getId()]]&affiliate=[[oauth.getPlayer().getAffiliateKey()]]</code></a>
       </div>
     {{ENDIF}}
   </div>
