--- a/templating/templates/content/score.template.html
+++ b/templating/templates/content/score.template.html
@@ -79,8 +79,8 @@
          * jQuery function to prevent default anchor event and take the href * and the title to make a share popup
          *
          * @param  {[object]} e           [Mouse event]
-         * @param  {[integer]} intWidth   [Popup width defalut 500]
-         * @param  {[integer]} intHeight  [Popup height defalut 400]
+         * @param  {[int]} intWidth   [Popup width defalut 500]
+         * @param  {[int]} intHeight  [Popup height defalut 400]
          * @param  {[boolean]} blnResize  [Is popup resizeabel default true]
          */
         $.fn.customerPopup = function (e, intWidth, intHeight, blnResize) {
@@ -97,7 +97,7 @@
             var strTitle = ((typeof this.attr('title') !== 'undefined') ? this.attr('title') : 'Social Share'),
                 strParam = 'width=' + intWidth + ',height=' + intHeight + ',resizable=' + strResize,
                 objWindow = window.open(this.attr('href'), strTitle, strParam).focus();
-        }
+        };
 
       /* ================================================== */
 
