--- a/templating/templates/views/compare2.template.html
+++ b/templating/templates/views/compare2.template.html
@@ -64,7 +64,7 @@
         </div>
       </form>
     </div>
-    {{IF [[debug]] && false}}
+    {{IF [[debug]]}}
       <div class="row">
         {{FOREACH deb;[[debug]]}}
           <p>[[deb]]</p>
