made numbers right aligned adjusted query

--- a/templating/templates/content/admin.template.html
+++ b/templating/templates/content/admin.template.html
@@ -12,23 +12,23 @@
         <tbody>
           <tr>
             <th>Total unique tuples</th>
-            <td>[[Util::number([[totalTuples]])]]</td>
+            <td class="right">[[Util::number([[totalTuples]])]]</td>
           </tr>
           <tr>
             <th>Pruned tuples</th>
-            <td>[[Util::number([[prunedTuples]])]]</td>
+            <td class="right">[[Util::number([[prunedTuples]])]]</td>
           </tr>
           <tr>
             <th>Fully evaluated tuples (excluding pruned ones)</th>
-            <td>[[Util::number([[finalTuples]])]]</td>
+            <td class="right">[[Util::number([[finalTuples]])]]</td>
           </tr>
           <tr>
             <th>Tuples which have not enough data to build a gaussian curve</th>
-            <td>[[Util::number([[emptyTuples]])]]</td>
+            <td class="right">[[Util::number([[emptyTuples]])]]</td>
           </tr>
           <tr>
             <th>Partially evaluated tuples (three or more answers)</th>
-            <td>[[Util::number([[incompleteTuples]])]]</td>
+            <td class="right">[[Util::number([[incompleteTuples]])]]</td>
           </tr>
         </tbody>
       </table>
