--- a/templating/templates/content/admin.template.html
+++ b/templating/templates/content/admin.template.html
@@ -5,7 +5,9 @@
     {{IF [[login.isLoggedin()]]}}
       <h3>Admin Home</h3>
       <div class="row">
-        <a class="btn-large waves-effect waves-light blue" href="session.php" target="_blank">Answer some Questions</a> (Important: These answers will be considered as very certain)<br>
+        <div class="col s12">
+          <a class="btn-large waves-effect waves-light blue" href="session.php" target="_blank">Answer some Questions</a> (Important: These answers will be considered as very certain)<br>
+        </div>
       </div>
 
       <h4>Statistics Overview</h4>
