--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -15,7 +15,7 @@
       <div class="row black-text large center">
         <div class="col s12 m12">
           <h4>Hey [[oauth.getPlayer().getPlayerName()]]</h4>
-          <h5>Play some more games to get missing achievements ;)</h5>
+          <h5>Play some more games to get missing achievements</h5>
         </div>
       </div>
     {{ENDIF}}
