--- a/templating/templates/struct/menu_entries.template.html
+++ b/templating/templates/struct/menu_entries.template.html
@@ -1,4 +1,5 @@
 <li[[menu.isActive('home')]]><a href="index.php">Home</a></li>
+<li><a href="session.php">Play</a></li>
 <li[[menu.isActive('leaderboards')]]><a href="leaderboards.php">Leaderboards</a></li>
 {{IF [[oauth.isLoggedin()]]}}
   <li[[menu.isActive('achievements')]]><a href="achievements.php">Achievements</a></li>
