--- a/templating/templates/content/home.template.html
+++ b/templating/templates/content/home.template.html
@@ -8,7 +8,7 @@
         <b>What is ArtSimily about?</b><br>
         ArtSimily is a game where you try to rate images by their contextual similarity and the "better" your answers
         are, the higher your score will get.<br>
-        Start playing with clicking the button below.
+        Start playing by clicking the button below.
       </div>
     </div>
     {{IF [[oauth.isLoggedin()]]}}
