updated achievements to calculate progress revised code to reduce code duplication added first percentage to achievements which are not unlocked yet

--- a/templating/templates/content/achievements.template.html
+++ b/templating/templates/content/achievements.template.html
@@ -11,7 +11,7 @@
               {{IF [[achieved.getVal([[achievement.getIdentifier()]])]]}}
                 <img src="static/[[achievement.getAchievementImage()]]">
               {{ELSE}}
-                <img src="static/placeholder.png">
+                [[achievement.getProgress([[oauth.getPlayer()]])]]%
               {{ENDIF}}
             </div>
             <div class="achievement-content-container">
