added twitter link and obfuscated email

--- a/templating/templates/content/faq.template.html
+++ b/templating/templates/content/faq.template.html
@@ -52,11 +52,16 @@
 
         <h5>I have more questions, how do I get in touch?</h5>
         <p>
-          You can contact us via Twitter: @ArtSimily or via email: artsimily@artsimily.com. We would love to hear from
+          You can contact us via Twitter: <a href="https://twitter.com/@ArtSimily">@ArtSimily</a> or via email: <span class="emrot">negfvzvyl@negfvzvyl.pbz</span>. We would love to hear from
           you.
         </p>
       </div>
     </div>
   </div>
 </main>
+<script type="text/javascript">
+    $(".emrot").each(function(){
+        $( this ).html(rot13($( this ).html()));
+    });
+</script>
 {%TEMPLATE->struct/foot%}
